# agents-team

./: AGENTS.md  README.md  pyproject.toml
agents/: builder.md  explorer.md  orchestrator.md  raidel-auditor.md  raidel-coder.md  raidel-planner.md  raidel-researcher.md  raidel-scout.md  researcher.md  reviewer.md
agents_team/: __init__.py  cli.py  diagnostics.py  installer.py  parser.py  paths.py  permissions.py  rendering.py  schema.py  validation.py
agents_team/installers/: __init__.py  claude.py  codex.py  common.py  opencode.py
docs/: README.md  canonical-agent-format.md  cli-design.md  decision-log.md  opencode-agent-implementation.md  permissions-model.md  product-overview.md  repository-patterns.md  tool-adapters.md
tests/: test_cli.py  test_diagnostics.py  test_parser.py  test_paths_and_install.py  test_permissions.py  test_renderers.py
